--- a/rgbd_object_detection/object_detection/config/ros_config.yaml
+++ b/rgbd_object_detection/object_detection/config/ros_config.yaml
@@ -1,10 +1,10 @@
 subscribers:
 
     camera_2d:
-        topic: /X1/front/image_raw          # Image Topic
+        topic: /X1/pan_tilt/image_raw          # Image Topic
 
     camera_3d:
-        topic: /X1/rgbd_camera/depth/points  # PointCloud2 XYZRGB Topic
+        topic: /X1/pan_tilt_rgbd_camera/depth/points  # PointCloud2 XYZRGB Topic
 
     synchronized_queue_size: 5             # number of frames to consider synchronizing
                                             # via ApproximateTimeSynchronizer
@@ -31,6 +31,6 @@ publishers:
 enable_global_point_publish: True
 
 ros_transforms:
-    robot_frame: X1/base_link/camera_front
+    robot_frame: X1/tilt_gimbal_link/camera_pan_tilt
     global_frame: artifact_origin
     transform_timeout: 0.5
