Update rgbd configs for different robot types n topics

--- a/rgbd_object_detection/object_detection/config/ros_config.yaml
+++ b/rgbd_object_detection/object_detection/config/ros_config.yaml
@@ -1,10 +1,5 @@
 subscribers:
-
-    camera_2d:
-        topic: pan_tilt/image_raw          # Image Topic
-
-    camera_3d:
-        topic: pan_tilt_rgbd_camera/depth/points  # PointCloud2 XYZRGB Topic
+    # Topic names are set in launch file
 
     synchronized_queue_size: 5             # number of frames to consider synchronizing
                                             # via ApproximateTimeSynchronizer
