Add edges. See more in description.
Edges added, will be published in the /global_graph/vis topic which makes use of /output2. You will need to edit exploration_goal.launch file in exploration_goal package - change the value for the param "graph_topic" to "output2". Then run "roslaunch exploration_goal exploration_goal.launch robot_name:=X1"
Max z height is set to 15. Resolution of dots is set to 1.5. Open the source code to change them.
 ~0.6s - 0.9s
amapper, exploration_goal, graph_msgs, map_merge, plot_dots and subt_msgs is required for building plot_dots.

--- a/plot_dots/CMakeLists.txt
+++ b/plot_dots/CMakeLists.txt
@@ -11,6 +11,8 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   sensor_msgs
   map_merge
+  geometry_msgs
+  graph_msgs
 #  pointcloud_to_laserscan
 )
 
@@ -110,7 +112,7 @@ catkin_package(
   CATKIN_DEPENDS 
 	roscpp
 	map_merge
-#	pointcloud_to_laserscan
+	geometry_msgs
 #  DEPENDS system_lib
 )
 
