--- a/ugv_movement_manager/CMakeLists.txt
+++ b/ugv_movement_manager/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(ugv_obstacle_avoidance)
+project(ugv_movement_manager)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -130,7 +130,7 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
+  include
   ${catkin_INCLUDE_DIRS}
 )
 
@@ -147,9 +147,9 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(${PROJECT_NAME}_node src/ugv_obstacle_avoidance_node.cpp)
-add_executable(terrain_graph_node src/terrain_graph_node.cpp)
-add_executable(traversable_map_node src/traversable_map_node.cpp)
+add_executable(${PROJECT_NAME}_node src/ugv_movement_manager_node.cpp)
+#add_executable(terrain_graph_node src/terrain_graph_node.cpp)
+#add_executable(traversable_map_node src/traversable_map_node.cpp)
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
@@ -159,20 +159,20 @@ add_executable(traversable_map_node src/traversable_map_node.cpp)
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-add_dependencies(terrain_graph_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-add_dependencies(traversable_map_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+#add_dependencies(terrain_graph_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+#add_dependencies(traversable_map_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 
 ## Specify libraries to link a library or executable target against
  target_link_libraries(${PROJECT_NAME}_node
    ${catkin_LIBRARIES} ${PCL_LIBRARIES}
  )
- target_link_libraries(terrain_graph_node
-   ${catkin_LIBRARIES} ${PCL_LIBRARIES}
- ) 
-target_link_libraries(traversable_map_node
-   ${catkin_LIBRARIES} ${PCL_LIBRARIES}
- )
+# target_link_libraries(terrain_graph_node
+#   ${catkin_LIBRARIES} ${PCL_LIBRARIES}
+# ) 
+#target_link_libraries(traversable_map_node
+#   ${catkin_LIBRARIES} ${PCL_LIBRARIES}
+# )
 
 #############
 ## Install ##
