--- a/ugv_movement_manager/package.xml
+++ b/ugv_movement_manager/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>ugv_obstacle_avoidance</name>
+  <name>ugv_movement_manager</name>
   <version>0.0.0</version>
   <description>The localisation and navigation package</description>
 
