--- a/rosmsg_compressor/CMakeLists.txt
+++ b/rosmsg_compressor/CMakeLists.txt
@@ -24,3 +24,11 @@ include_directories(
   include
   ${catkin_INCLUDE_DIRS}
 )
+
+add_library(${PROJECT_NAME} src/sample_node.cpp)
+add_executable(sample_node src/sample_node.cpp)
+add_dependencies(sample_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries( sample_node
+  ${ZLIB_LIBRARIES}
+  ${catkin_LIBRARIES}
+)
